--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/inter": "^5.0.18",
+    "@google/generative-ai": "^0.11.3",
     "@mui/icons-material": "^5.15.17",
     "@mui/material": "^5.15.17",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^15.0.7",
     "@testing-library/user-event": "^14.5.2",
     "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.0",
